# AUR30LA

./: CMakeLists.txt  LICENSE.txt  README.md
dependencies/glad/: glad.h
imgui/: imgui.cpp  imgui.h
includes/: cmath.cpp
includes/glad/: glad.c
includes/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h  imstb_truetype.h
includes/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h
licences/: LICENSE_assimp.txt  LICENSE_glad.txt  LICENSE_glfw.txt
src/: config.cpp  config.h  engine.h  glad.c  main.cpp  material.cpp  stb_image.h
src/aur/: aur.cpp  aur.h  aur.hpp  camera.cpp  camera.h  camera.hpp  components.h  components.hpp  input.hpp  variables.h  variables.hpp
src/aur/view/: EBO.cpp  EBO.hpp  VAO.cpp  VAO.h  VAO.hpp  VBO.cpp  VBO.h  default.frag  default.vert  render.h  render.hpp  shader.cpp  shader.h  shader.hpp  texture.cpp  texture.h  texture.hpp
src/controller/: app.cpp  app.h
src/editor/: editor.cpp  editor.h  editorSettings.cpp  engineSettings.cpp  materialMaker.cpp  objectManipulator.cpp  projectSettings.cpp  settings.cpp  soundOrganizer.cpp  soundOrganizer.h  viewportEditor.cpp
src/project/: project.cpp  project.h  project.hpp
src/systems/: camera_system.cpp  camera_system.h  render_system.cpp  render_system.h
src/view/: shader.cpp  shader.h
